Fix error line 549
Opening curly brace had an extra space

--- a/assets/src/style/partials/_flipboxes.scss
+++ b/assets/src/style/partials/_flipboxes.scss
@@ -545,8 +545,7 @@
   .len,
   .matts,
   .david,
-  .jessica
-   {
+  .jessica {
 
     .bigshow {
       left: -195px;
